--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
 
     <!-- Buttons -->
     <string name="save_btn_text">Save</string>
+    <string name="delete_btn_text">Delete</string>
     <string name="add_contact_btn_description">Add contact</string>
 
     <!-- errors -->
@@ -24,4 +25,9 @@
     <string name="cant_load_contacts_list">Can\'t load list of contacts</string>
     <string name="phone_number_already_exists">Contact with this phone number already exists</string>
     <string name="cant_open_contact_not_found">Can\'t open. Contact not found</string>
+
+    <!-- dialogs -->
+    <string name="delete_contact_dialog">Do you want to delete this contact?</string>
+    <string name="delete_contact_dialog_positive_btn">Yes</string>
+    <string name="delete_contact_dialog_negative_btn">No</string>
 </resources>
