--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="cant_open_contact_not_found">Can\'t open. Contact not found</string>
     <string name="set_background_date_time">App was set in background at</string>
     <string name="value_too_long">Max length = </string>
+    <string name="sms_error">Can\'t send sms: </string>
 
     <!-- dialogs -->
     <string name="delete_contact_dialog">Do you want to delete this contact?</string>
