--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,9 +32,13 @@
     <string name="set_background_date_time">App was set in background at</string>
     <string name="value_too_long">Max length = </string>
     <string name="sms_error">Can\'t send sms: </string>
+    <string name="unsaved_changes">Save changes first!</string>
 
     <!-- dialogs -->
     <string name="delete_contact_dialog">Do you want to delete this contact?</string>
     <string name="delete_contact_dialog_positive_btn">Yes</string>
     <string name="delete_contact_dialog_negative_btn">No</string>
+
+    <!-- hints -->
+    <string name="msg_hint">Type your message here</string>
 </resources>
